@@ -1,3 +1,9 @@
+2003-11-03  Not Zed  <NotZed@Ximian.com>
+
+	* e-msg-composer.c (build_message): changed to use ciphercontext
+	directly to sign the message, no multipart-signed usage.
+	(build_message): do the same for multipart/encryption for gpg encrypting.
+
 2003-11-03  Ettore Perazzoli  <ettore@ximian.com>
 
 	* e-msg-composer-hdrs.h (SELECT_NAMES_OAFIID): Append "_2".
